Uploaded frameworks for topics

--- a/main.html
+++ b/main.html
@@ -13,52 +13,52 @@
       <td>Last Edited 5/1/17</td>
     </tr>
     <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
+      <td><a href="DOM manipulation.html" title="DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc." target="_blank">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></td>
+      <td>In progress</td>
+    </tr>
+    <tr>
+      <td><a href="HTML5 Tags.html" title="HTML5 Tags - Video, Audio, and Canvas" target="_blank">HTML5 Tags - Video, Audio, and Canvas</a></td>
+      <td>In progress</td>
+    </tr>
+    <tr>
+      <td><a href="JSON.html" title="JSON Parse and Stringify" target="_blank">JSON Parse and Stringify</a></td>
+      <td>In progress</td>
+    </tr>
+    <tr>
+      <td><a href="CSS3 Transitions.html" title="Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript" target="_blank">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</a></td>
+      <td>In progress</td>
+    </tr>
+    <tr>
+      <td><a href="JavaScript Events.html" title="Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events" target="_blank">Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events</a></td>
+      <td>In progress</td>
+    </tr>
+    <tr>
+      <td><a href="Loops and arrays.html" title="Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays" target="_blank">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></td>
+      <td>In progress</td>
+    </tr>
+    <tr>
+      <td><a href="CSS Class Properties.html" title="Manipulating CSS Class Properties Using JavaScript" target="_blank">Manipulating CSS Class Properties Using JavaScript</a></td>
+      <td>In progress</td>
+    </tr>
+    <tr>
+      <td><a href="Object Creation.html" title="Object Creation Functions, Inheritance, Properties, Methods, Instantiation" target="_blank">Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a></td>
+      <td>In progress</td>
+    </tr>
+    <tr>
+      <td><a href="XMLHTTPRequest.html" title="Using XMLHTTPRequest to Consume a JSON Web Service" target="_blank">Using XMLHTTPRequest to Consume a JSON Web Service</a></td>
+      <td>In progress</td>
     </tr>
     <tr>
       <td>&nbsp;</td>
-      <td>&nbsp;</td>
+      <td>In progress</td>
     </tr>
     <tr>
       <td>&nbsp;</td>
-      <td>&nbsp;</td>
+      <td>In progress</td>
     </tr>
     <tr>
       <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
+      <td>In progress</td>
     </tr>
   </tbody>
 </table>
