--- a/CSS Class Properties.html
+++ b/CSS Class Properties.html
@@ -67,21 +67,21 @@
 	</header>
 	<div class="background">
 		<h2>Manipulating CSS Class Properties Using JavaScript:</h2>
-		<p>Choose a background color!<p>
+		<p>First, choose a background color!<p>
 		<button onclick="backgroundColor('green')">Green</button>
 		<button onclick="backgroundColor('blue')">Blue</button>
 		<button onclick="backgroundColor('red')">Red</button>
 		<button onclick="backgroundColor('#62a8ea')">Reset</button>
-		<p id="font">What should be the font style for this lovely text?</p>
+		<p id="font">Next, choose a font style!</p>
 		<button onclick="fontWeight('900')">Bold</button>
 		<button onclick="fontStyle('oblique')">Oblique</button>
 		<button onclick="fontStyle('italic')">Italic</button>
 		<button onclick="fontFamily('Georgia, serif')">Georgia</button>
 		<button onclick="fontFamily('Comic Sans MS, cursive, sans-serif')">Comic Sans</button>
 		<button onclick="fontFamily('Arial, Helvetica, sans-serif'), fontStyle('initial'), fontWeight('initial')">Reset</button>
-		<p id="newDiv">Let's add a new style element and attach it to this paragraph!</p>
+		<p id="newDiv">Now, let's add a new style element and attach it to this paragraph!</p>
 		<button onclick="newStyleDiv()">Give it Some Style!</button>
-		<button onclick="resetStyleDiv()">No Style for You!</button>
+		<button onclick="resetStyleDiv()">Undo! Undo!</button>
 		<p>Lastly, let's alter the already existing class "background" being used to create the box and white background color these paragraphs are in.</p>
 		<button onclick="changeClass()">Alter "Background" CSS Class</button>
 		<button onclick="resetClass()">Reset "Background" CSS Class</button>
