--- a/main.html
+++ b/main.html
@@ -6,11 +6,11 @@
 </head>
 <h1>CIT 261:02 CODE BY J.D. JENSEN</h1>
 <body>
-<table width="200" border="1">
+<table width="926" border="1">
   <tbody>
     <tr>
-      <td><a href="local storage.html" title="Local Storage code page" target="_blank">Local Storage API</a></td>
-      <td>Last Edited 5/1/17</td>
+      <td width="794"><a href="local storage.html" title="Local Storage code page" target="_blank">Local Storage API</a></td>
+      <td width="116">Graded - Passed 5/13/17</td>
     </tr>
     <tr>
       <td><a href="DOM manipulation.html" title="DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc." target="_blank">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></td>
@@ -38,7 +38,7 @@
     </tr>
     <tr>
       <td><a href="CSS Class Properties.html" title="Manipulating CSS Class Properties Using JavaScript" target="_blank">Manipulating CSS Class Properties Using JavaScript</a></td>
-      <td>In progress</td>
+      <td>Submitted for grading - 5/18/17</td>
     </tr>
     <tr>
       <td><a href="Object Creation.html" title="Object Creation Functions, Inheritance, Properties, Methods, Instantiation" target="_blank">Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a></td>
