--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
     </tr>
     <tr>
       <td><a href="CSS3 Transitions.html" title="Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript" target="_blank">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</a></td>
-      <td>In progress</td>
+      <td>Submitted for Grading - 5/25/17</td>
     </tr>
     <tr>
       <td><a href="JavaScript Events.html" title="Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events" target="_blank">Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events</a></td>
@@ -38,26 +38,14 @@
     </tr>
     <tr>
       <td><a href="CSS Class Properties.html" title="Manipulating CSS Class Properties Using JavaScript" target="_blank">Manipulating CSS Class Properties Using JavaScript</a></td>
-      <td>Submitted for grading - 5/18/17</td>
+      <td>Graded - Passed 5/18/17</td>
     </tr>
     <tr>
       <td><a href="Object Creation.html" title="Object Creation Functions, Inheritance, Properties, Methods, Instantiation" target="_blank">Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a></td>
-      <td>In progress</td>
+      <td> Submitted for Grading - 5/25/17</td>
     </tr>
     <tr>
       <td><a href="XMLHTTPRequest.html" title="Using XMLHTTPRequest to Consume a JSON Web Service" target="_blank">Using XMLHTTPRequest to Consume a JSON Web Service</a></td>
-      <td>In progress</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>In progress</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>In progress</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
       <td>In progress</td>
     </tr>
   </tbody>
