--- a/Object Creation.html
+++ b/Object Creation.html
@@ -3,7 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>CIT 261 - Object Creation</title>
-	<link rel="stylesheet" type="text/css" href="style.css" media="screen">	
+	<link rel="stylesheet" type="text/css" href="style.css" media="screen">
+	<link href='//fonts.googleapis.com/css?family=Shadows Into Light Two' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Shadows Into Light Two';font-size: 22px;
+}
+</style>	
 	
 	<script type="text/javascript">
 		var totalMembers = 0;
