--- a/Object Creation.html
+++ b/Object Creation.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<title>CIT 261 - Object Creation</title>
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen">
-	<link href='//fonts.googleapis.com/css?family=Shadows Into Light Two' rel='stylesheet'>
+	<link href='//fonts.googleapis.com/css?family=Rock Salt' rel='stylesheet'>
 <style>
 body {
-    font-family: 'Shadows Into Light Two';font-size: 22px;
+    font-family: 'Rock Salt';font-size: 22px;
 }
 </style>	
 	
