--- a/Object Creation.html
+++ b/Object Creation.html
@@ -5,9 +5,13 @@
 	<title>CIT 261 - Object Creation</title>
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen">
 	<link href='//fonts.googleapis.com/css?family=Rock Salt' rel='stylesheet'>
+	<link href='//fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
 <style>
-body {
+	h1 {font-family: 'Quicksand';}
+	h2 {font-family: 'Quicksand';}
+	body {
     font-family: 'Rock Salt';font-size: 22px;
+	background-color: sandybrown;
 }
 </style>	
 	
