--- a/DOM manipulation.html
+++ b/DOM manipulation.html
@@ -4,6 +4,13 @@
 <meta charset="UTF-8">
 <title>CIT 261 - DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</title>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen">	
+<link href='//fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+	<link href='//fonts.googleapis.com/css?family=BioRhyme' rel='stylesheet'>
+<style>
+	h1 {font-family: 'Quicksand';}
+	h2 {font-family: 'Quicksand';}
+	body {font-family: 'BioRhyme';}
+</style>
 	
 	<script type="text/javascript">
 		function left(){
