--- a/main.html
+++ b/main.html
@@ -3,6 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>CIT 261:02 MAIN PAGE</title>
+<link href='//fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+	<link href='//fonts.googleapis.com/css?family=BioRhyme' rel='stylesheet'>
+<style>
+	h1 {font-family: 'Quicksand';}
+	h2 {font-family: 'Quicksand';}
+	body {font-family: 'BioRhyme';}
+</style>
 </head>
 <h1>CIT 261:02 CODE BY J.D. JENSEN</h1>
 <body>
