--- a/HTML5 Tags.html
+++ b/HTML5 Tags.html
@@ -4,6 +4,13 @@
 	<meta charset="utf-8">
 	<title>CIT 261 - HTML5 Tags, Video, Audio, and Canvas</title>
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen">	
+	<link href='//fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+	<link href='//fonts.googleapis.com/css?family=BioRhyme' rel='stylesheet'>
+<style>
+	h1 {font-family: 'Quicksand';}
+	h2 {font-family: 'Quicksand';}
+	body {font-family: 'BioRhyme';}
+</style>
 
 </head>
 
