--- a/Object Creation.html
+++ b/Object Creation.html
@@ -11,7 +11,7 @@
 	h2 {font-family: 'Quicksand';}
 	body {
     font-family: 'Rock Salt';font-size: 22px;
-	background-color: sandybrown;
+	background-color: #e7d0a8;
 }
 </style>	
 	
