--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -5,6 +5,13 @@
 	<title>CIT 261 - XMLHTTPRequest, AJAX</title>
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen">	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+	<link href='//fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+	<link href='//fonts.googleapis.com/css?family=BioRhyme' rel='stylesheet'>
+<style>
+	h1 {font-family: 'Quicksand';}
+	h2 {font-family: 'Quicksand';}
+	body {font-family: 'BioRhyme';}
+</style>
 
 	<script type="text/javascript">
 		var url = "https://api.nasa.gov/planetary/apod?api_key=SSIOuWA9xZI2gqj8b0lhuSHqgTdhri5bj5kFZeFs";
