--- a/local storage.html
+++ b/local storage.html
@@ -3,7 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>CIT 261 - Local Storage API</title>
-	<link rel="stylesheet" type="text/css" href="style.css" media="screen">	
+	<link rel="stylesheet" type="text/css" href="style.css" media="screen">
+	<link href='//fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+	<link href='//fonts.googleapis.com/css?family=BioRhyme' rel='stylesheet'>
+<style>
+	h1 {font-family: 'Quicksand';}
+	h2 {font-family: 'Quicksand';}
+	body {font-family: 'BioRhyme';}
+</style>	
 	
 	<script type="text/javascript">
 				var bandList = new Array();
