--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
     </tr>
     <tr>
       <td><a href="Loops and arrays.html" title="Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays" target="_blank">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></td>
-      <td>In progress</td>
+      <td>Submitted for Grading - 5/25/17</td>
     </tr>
     <tr>
       <td><a href="CSS Class Properties.html" title="Manipulating CSS Class Properties Using JavaScript" target="_blank">Manipulating CSS Class Properties Using JavaScript</a></td>
