--- a/HTML5 Tags.html
+++ b/HTML5 Tags.html
@@ -26,49 +26,49 @@
 		<h2>Recovery Chapter One Preview:</h2>
 		<h3>Trailer:</h3>
 		<video width="500px" height="350px" controls>
-			<source src="media/recovery-project-preview.mp4" type="video/mp4">
+			<source src="recovery-project-preview.mp4" type="video/mp4">
 			The browser you are using does not support this video tag
 		</video>
 		<h3>Original Soundtrack:</h3>
 		<p>Main theme by Joshua Dilworth:</p>
 		<audio controls>
-		<source src="media/main-theme.ogg" type="audio/ogg">
+		<source src="main-theme.ogg" type="audio/ogg">
 		The browser you are using does not support this audio element.
 		</audio>
 
 		<p>Michele's Theme by Hyrum Barker:</p>
 		<audio controls>
-		<source src="media/michele-theme.ogg" type="audio/ogg">
+		<source src="michele-theme.ogg" type="audio/ogg">
 		The browser you are using does not support this audio element.
 		</audio>
 		
 		<p>Victory is Imminent (Battle Theme) by Joshua Dilworth:</p>
 		<audio controls>
-		<source src="media/victory-is-immenent.mp3" type="audio/mpeg">
+		<source src="victory-is-immenent.mp3" type="audio/mpeg">
 		The browser you are using does not support this audio element.
 		</audio>
 		
 		<p>Crystal Cavern by Joshua Dilworth:</p>
 		<audio controls>
-		<source src="media/crystal-cavern.mp3" type="audio/mpeg">
+		<source src="crystal-cavern.mp3" type="audio/mpeg">
 		The browser you are using does not support this audio element.
 		</audio>
 		
 		<p>Dark Forest by Hyrum Barker:</p>
 		<audio controls>
-		<source src="media/dark-forest.mp3" type="audio/mpeg">
+		<source src="dark-forest.mp3" type="audio/mpeg">
 		The browser you are using does not support this audio element.
 		</audio>
 		
 		<p>Haunted Fortress by Joshua Dilworth:</p>
 		<audio controls>
-		<source src="media/haunted-fortress.mp3" type="audio/mpeg">
+		<source src="haunted-fortress.mp3" type="audio/mpeg">
 		The browser you are using does not support this audio element.
 		</audio>
 		
 		<p>Desert Fury by Joshua Dilworth:</p>
 		<audio controls>
-		<source src="media/desert-fury.mp3" type="audio/mpeg">
+		<source src="desert-fury.mp3" type="audio/mpeg">
 		The browser you are using does not support this audio element.
 		</audio>
 		<h3>Characters:</h3>
@@ -84,27 +84,27 @@
 		Your browser does not support the HTML5 canvas tag.
 		</canvas>
 		<div style="display:none;">
-			<img id="source1" src="media/michele.png"
+			<img id="source1" src="michele.png"
 			width="272" height="288">
 			<img id="sprite1" src="media/michele-sprite.png"
 			width="272" height="288">
-			<img id="source2" src="media/zephin.png"
+			<img id="source2" src="zephin.png"
 			width="272" height="288">
 			<img id="sprite2" src="media/zephin-sprite.png"
 			width="272" height="288">
-			<img id="source3" src="media/ryan.png"
+			<img id="source3" src="ryan.png"
 			width="272" height="288">
 			<img id="sprite3" src="media/ryan-sprite.png"
 			width="272" height="288">
-			<img id="source4" src="media/tamra.png"
+			<img id="source4" src="tamra.png"
 			width="272" height="288">
 			<img id="sprite4" src="media/tamra-sprite.png"
 			width="272" height="288">
-			<img id="source5" src="media/jeane.png"
+			<img id="source5" src="jeane.png"
 			width="272" height="288">
 			<img id="sprite5" src="media/jeane-sprite.png"
 			width="272" height="288">
-			<img id="source6" src="media/seth.png"
+			<img id="source6" src="seth.png"
 			width="272" height="288">
 			<img id="sprite6" src="media/seth-sprite.png"
 			width="272" height="288">
