--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
     </tr>
     <tr>
       <td><a href="HTML5 Tags.html" title="HTML5 Tags - Video, Audio, and Canvas" target="_blank">HTML5 Tags - Video, Audio, and Canvas</a></td>
-      <td>In progress</td>
+      <td> Graded - Passed 6/5/17</td>
     </tr>
     <tr>
       <td><a href="JSON.html" title="JSON Parse and Stringify" target="_blank">JSON Parse and Stringify</a></td>
@@ -37,7 +37,7 @@
     </tr>
     <tr>
       <td><a href="JavaScript Events.html" title="Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events" target="_blank">Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events</a></td>
-      <td>In progress</td>
+      <td> Submitted for Grading - 6/12/17</td>
     </tr>
     <tr>
       <td><a href="Loops and arrays.html" title="Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays" target="_blank">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></td>
