--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -5,8 +5,8 @@
 	<title>CIT 261 - XMLHTTPRequest, AJAX</title>
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen">	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-	<link href='//fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
-	<link href='//fonts.googleapis.com/css?family=BioRhyme' rel='stylesheet'>
+	<link href="//fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link href="//fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
 <style>
 	h1 {font-family: 'Quicksand';}
 	h2 {font-family: 'Quicksand';}
@@ -123,7 +123,7 @@
 		<p id="apod_explaination"></p>
 	<footer>
 		<p>Copyright 2017 - J.D. Jensen</p>
-	<footer>
+		</footer>
 	</div>
 	
 	</body>
