--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>CIT 261 - XMLHTTPRequest, AJAX</title>
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen">	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link href="//fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
 <style>
