--- a/test.html
+++ b/test.html
@@ -10,6 +10,11 @@
 	h1 {font-family: 'Quicksand';}
 	h2 {font-family: 'Quicksand';}
 	body {font-family: 'BioRhyme';}
+	.hide-me {
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(.75);
+}
 </style>
 </head>
 <body>
