--- a/test.html
+++ b/test.html
@@ -4,18 +4,72 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>CIT 261 - XMLHTTPRequest, AJAX</title>
-<link href='//fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+<!--<link href='//fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
 	<link href='//fonts.googleapis.com/css?family=BioRhyme' rel='stylesheet'>
 <style>
 	h1 {font-family: 'Quicksand';}
 	h2 {font-family: 'Quicksand';}
 	body {font-family: 'BioRhyme';}
-	.hide-me {
-  visibility: hidden;
-  opacity: 0;
-  transform: scale(.75);
+</style>-->
+<link href="json.css" rel="stylesheet" type="text/css">
+	<script>
+	var pageCounter = 1;
+var animalContainer = document.getElementById("animal-info");
+var btn = document.getElementById("btn");
+
+btn.addEventListener("click", function() {
+	var myRequest = new XMLHttpRequest();
+	myRequest.open('GET', '/info-' + pageCounter + '.json');
+	myRequest.onload = function() {
+		if (myRequest.status >= 200 && myRequest.status <400){
+		var myData = JSON.parse(myRequest.responseText);
+		renderHTML(myData);
+		} else {
+			console.log("We connected to the server, but it returned an error.");
+		}
+};
+
+	myRequest.onerror = function() {
+		console.log("Connection error");
+	};
+	
+	myRequest.send();
+	pageCounter++;
+	if (pageCounter > 3) {
+		btn.classList.add("hide-me");
+	}
+});
+
+function renderHTML(data) {
+	var htmlString = "";
+	
+	for (i = 0; i < data.length; i++) {
+		htmlString += "<p>" + data[i].name + " is a " + data[i].species + " that likes to eat ";
+		
+		for (ii = 0; ii > data[i].foods.likes.length; ii++) {
+			if (ii == 0) {
+				htmlString += data[i].foods.likes[ii];
+			} else {
+				htmlString += " and " + data[i].foods.likes[ii];
+			}
+		}
+		
+		htmlString += ' and dislikes ';
+		
+		for (ii = 0; ii > data[i].foods.dislikes.length; ii++) {
+			if (ii == 0) {
+				htmlString += data[i].foods.dislikes[ii];
+			} else {
+				htmlString += " and " + data[i].foods.dislikes[ii];
+			}
+		}
+		
+		htmlString += '.</p>';
+	}
+	
+	animalContainer.insertAdjacentHTML('beforeend', htmlString);	
 }
-</style>
+	</script>
 </head>
 <body>
 <header>
@@ -28,6 +82,6 @@
 	
 	<div id="animal-info"></div>
 	
-	<script src="/main.js"></script>
+<!--	<script src="/main.js"></script>-->
 	</body>
 </html>
