--- a/test.html
+++ b/test.html
@@ -15,8 +15,11 @@
 	<script>
 	var pageCounter = 1;
 var animalContainer = document.getElementById("animal-info");
+var btn = document.getElementById("btn");
 
-document.getElementById("btn").addEventListener("click", function() {
+btn.addEventListener("click", myFunction); 
+
+function myFunction(){
 	var myRequest = new XMLHttpRequest();
 	myRequest.open('GET', 'https://jensen-jared.github.io/info-' + pageCounter + '.json');
 	myRequest.onload = function() {
@@ -28,7 +31,7 @@ document.getElementById("btn").addEventListener("click", function() {
 		}
 };
 
-	myRequest.onerror = function() {
+	myRequest.onerror = myFunction() {
 		console.log("Connection error");
 	};
 	
@@ -37,7 +40,7 @@ document.getElementById("btn").addEventListener("click", function() {
 	if (pageCounter > 3) {
 		btn.classList.add("hide-me");
 	}
-});
+};
 
 function renderHTML(data) {
 	var htmlString = "";
