--- a/test.html
+++ b/test.html
@@ -19,9 +19,9 @@ var btn = document.getElementById("btn");
 
 btn.addEventListener("click", myFunction); 
 
-function myFunction(){
+function myFunction() {
 	var myRequest = new XMLHttpRequest();
-	myRequest.open('GET', 'https://jensen-jared.github.io/info-' + pageCounter + '.json');
+	myRequest.open('GET', '/info-' + pageCounter + '.json');
 	myRequest.onload = function() {
 		if (myRequest.status >= 200 && myRequest.status <400){
 		var myData = JSON.parse(myRequest.responseText);
