--- a/test.html
+++ b/test.html
@@ -31,9 +31,9 @@ function myFunction() {
 		}
 };
 
-	myRequest.onerror = myFunction() {
+	/*myRequest.onerror = myFunction() {
 		console.log("Connection error");
-	};
+	};*/
 	
 	myRequest.send();
 	pageCounter++;
