--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
 		<h1>CIT 261 - J.D. Jensen</h1>
 		<h2>Application Development</h2>
 	</a>
-	<button id="btn">Fetch Info for 3 New Animals</button>
+	<button id="myBtn">Fetch Info for 3 New Animals</button>
 	</header>
 	
 	<div id="animal-info"></div>
