--- a/test.html
+++ b/test.html
@@ -15,9 +15,7 @@
 <script>
 var pageCounter = 1;
 var animalContainer = document.getElementById("animal-info");
-var btn = document.getElementById("myBtn");
-
-btn.addEventListener("click", function() {
+function myFunction() {
 	var myRequest = new XMLHttpRequest();
 	myRequest.open('GET', 'https://jensen-jared.github.io/info-' + pageCounter + '.json');
 	myRequest.onload = function() {
@@ -29,7 +27,7 @@ btn.addEventListener("click", function() {
 		}
 };
 
-	myRequest.onerror = function() {
+	myRequest.onerror = myFunction() {
 		console.log("Connection error");
 	};
 	
@@ -77,7 +75,7 @@ function renderHTML(data) {
 		<h1>CIT 261 - J.D. Jensen</h1>
 		<h2>Application Development</h2>
 	</a>
-	<button type="button" id="myBtn">Fetch Info for 3 New Animals</button>
+	<button type="button" id="myBtn" onClick="myFunction()">Fetch Info for 3 New Animals</button>
 	</header>
 	
 	<div id="animal-info"></div>
